Re-organize main.css, rename div wrappers, replace id with class attributes

--- a/home.html
+++ b/home.html
@@ -31,7 +31,7 @@
 			<article>
 				<header>
 					<h2>What's New</h2>
-					<div id="author-date">
+					<div class="byline-wrapper">
 						<img src="images/id.jpg" alt="id photo" width="40px">
 						<p>
 							<a href="mailto:marios.sofokleous@yandex.com">Marios Sofokleous</a>
