--- a/new-elements.html
+++ b/new-elements.html
@@ -31,7 +31,7 @@
 			<article>
 				<header>
 					<h2>New Elements</h2>
-					<div id="author-date">
+					<div class="byline-wrapper">
 						<img src="images/id.jpg" alt="id photo" width="40px">
 						<p>
 							<a href="mailto:marios.sofokleous@yandex.com">Marios Sofokleous</a>
@@ -57,7 +57,7 @@
 					</p>
 					<h4>Example</h4>
 					<h5>HTML (Prior to HTML5)</h5>
-					<div class="code">
+					<div class="code-wrapper">
 						<p>
 							&ltdiv class="section"&gt<br>
 							&nbsp&nbsp&lth2&gtBlog&lt/h2&gt<br>
@@ -67,7 +67,7 @@
 						</p>
 					</div>
 					<h5>HTML5</h5>
-					<div class="code">
+					<div class="code-wrapper">
 						<p>
 							&ltsection&gt<br>
 							&nbsp&nbsp&lth2&gtBlog&lt/h2&gt<br>
@@ -93,7 +93,7 @@
 					</p>
 					<h4>Example:</h4>
 					<h5>HTML (Prior to HTML5)</h5>
-					<div class="code">
+					<div class="code-wrapper">
 						<p>
 							&ltdiv class="header"&gt<br>
 							&nbsp&nbsp&lth1&gtArt Gallery Blog&lt/h1&gt<br>
@@ -103,7 +103,7 @@
 						</p>
 					</div>
 					<h5>HTML5</h5>
-					<div class="code">
+					<div class="code-wrapper">
 						<p>
 							&ltheader&gt<br>
 							&nbsp&nbsp&lth1&gtArt Gallery Blog&lt/h1&gt<br>
@@ -129,7 +129,7 @@
 					</p>
 					<h4>Example</h4>
 					<h5>HTML (Prior to HTML5)</h5>
-					<div class="code">
+					<div class="code-wrapper">
 						<p>
 							&ltdiv class="footer"&gt<br>
 							&nbsp&nbsp&ltp&gt&copy; Art Gallery 2017&lt/p&gt<br>
@@ -137,7 +137,7 @@
 						</p>
 					</div>
 					<h5>HTML5</h5>
-					<div class="code">
+					<div class="code-wrapper">
 						<p>
 							&ltfooter&gt<br>
 							&nbsp&nbsp&ltp&gt&copy; Art Gallery 2017&lt/p&gt<br>
@@ -159,7 +159,7 @@
 						often used within the "footer".
 					</p>
 					<h5>HTML5</h5>
-					<div class="code">
+					<div class="code-wrapper">
 						<p>
 							&ltfooter&gt<br>
 							&nbsp&nbsp&ltaddress&gt<br>
@@ -191,7 +191,7 @@
 						subscribe(i.e. Enter your email...) contents.
 					</p> 
 					<h5>HTML (Prior to HTML5)</h5>
-					<div class="code">
+					<div class="code-wrapper">
 						<p>
 							&ltdiv class="sidebar"&gt<br>
 							&nbsp&nbsp...<br>
@@ -199,7 +199,7 @@
 						</p>
 					</div>
 					<h5>HTML5</h5>
-					<div class="code">
+					<div class="code-wrapper">
 						<p>
 							&ltaside&gt<br>
 							&nbsp&nbsp...<br>
@@ -226,7 +226,7 @@
 						Science, Video, Reviews, International Edition).
 					</p> 
 					<h5>HTML (Prior to HTML5)</h5>
-					<div class="code">
+					<div class="code-wrapper">
 						<p>
 							&ltul class="nav"&gt<br>
 							&nbsp&nbsp...<br>
@@ -234,7 +234,7 @@
 						</p>
 					</div>
 					<h5>HTML5</h5>
-					<div class="code">
+					<div class="code-wrapper">
 						<p>
 							&ltnav&gt<br>
 							&nbsp&nbsp&ltul&gt<br>
@@ -264,7 +264,7 @@
 					<h4>Examples</h4>
 					<p>Blog post, news story, comment on a post, a review.</p>
 					<h5>HTML (Prior to HTML5)</h5>
-					<div class="code">
+					<div class="code-wrapper">
 						<p>
 							&ltdiv class="article"&gt<br>
 							&nbsp&nbsp...<br>
@@ -272,7 +272,7 @@
 						</p>
 					</div>
 					<h5>HTML5</h5>
-					<div class="code">
+					<div class="code-wrapper">
 						<p>
 							&ltarticle&gt<br>
 							&nbsp&nbsp...<br>
@@ -296,7 +296,7 @@
 					</p>
 					<h4>Example</h4>
 					<h5>HTML (Prior to HTML5)</h5>
-					<div class="code">
+					<div class="code-wrapper">
 						<p>
 							&ltdiv class="main"&gt<br>
 							&nbsp&nbsp....<br>
@@ -304,7 +304,7 @@
 						</p>
 					</div>
 					<h5>HTML5</h5>
-					<div class="code">
+					<div class="code-wrapper">
 						<p>	
 							&ltmain&gt<br>
 							&nbsp&nbsp...<br>
@@ -326,7 +326,7 @@
 					</p>
 					<h4>Example</h4>
 					<h5>HTML (Prior to HTML5)</h5>
-					<div class="code">
+					<div class="code-wrapper">
 						<p>
 							&ltdiv class="image"&gt<br>
 							&nbsp&nbsp&ltimg src="image.png" alt="My picture"&gt<br>
@@ -334,7 +334,7 @@
 						</p>
 					</div>
 					<h5>HTML5</h5>
-					<div class="code">
+					<div class="code-wrapper">
 						<p>
 							&ltfigure&gt<br>
 							&nbsp&nbsp&ltimg src="image.png" alt="My picture"&gt<br>
@@ -354,7 +354,7 @@
 					</p>
 					<h4>Example</h4> 
 					<h5>HTML5</h5>
-					<div class="code">
+					<div class="code-wrapper">
 						<p>
 							&ltfigure&gt<br>
 							&nbsp&nbsp&ltimg src="image.png" alt="My picture"&gt<br>
@@ -376,7 +376,7 @@
 					</p>
 					<h4>Example</h4> 
 					<h5>HTML5</h5>
-					<div class="code">
+					<div class="code-wrapper">
 						<p>&lttime&gt2013-09-16&lt/time&gt</p>
 						<p>
 							We can use the "datetime" attribute to get our desired format:<br>
