--- a/new-form-elements.html
+++ b/new-form-elements.html
@@ -31,7 +31,7 @@
 			<article>
 				<header>
 					<h2>New Form Elements</h2>
-					<div id="author-date">
+					<div class="byline-wrapper">
 						<img src="images/id.jpg" alt="id photo" width="40px">
 						<p>
 							<a href="mailto:marios.sofokleous@yandex.com">Marios Sofokleous</a>
@@ -50,7 +50,7 @@
 					</p> 
 					<h4>Example:</h4>
 					<h5>HTML5</h5>
-					<div class="code">
+					<div class="code-wrapper">
 						<p>
 							&ltform&gt<br>
 							&nbsp&nbspChoose an OS:<br>
@@ -71,7 +71,7 @@
 						&ltdatalist&gt options.
 					</p>
 					<h5>Result</h5>
-					<div class="result">
+					<div class="result-wrapper">
 						<form>
 							Choose an OS:
 							<input list="operating systems">
