--- a/new-input-types.html
+++ b/new-input-types.html
@@ -31,7 +31,7 @@
 			<article>
 				<header>
 					<h2>New Input Types</h2>
-					<div id="author-date">
+					<div class="byline-wrapper">
 						<img src="images/id.jpg" alt="id photo" width="40px">
 						<p>
 							<a href="mailto:marios.sofokleous@yandex.com">Marios Sofokleous</a>
@@ -59,7 +59,7 @@
 					</p> 
 					<h4>Example</h4>
 					<h5>HTML5</h5>
-					<div class="code">
+					<div class="code-wrapper">
 						<p>
 							&ltform&gt<br>
 							&nbsp&nbspSearch Google:<br>
@@ -68,7 +68,7 @@
 						</p>
 					</div>
 					<h5>Result</h5>
-					<div class="result">
+					<div class="result-wrapper">
 						<form>
 							Search Google:
 							<input type="search" name="google-search">
@@ -84,7 +84,7 @@
 					</p> 
 					<h4>Example</h4>
 					<h5>HTML5</h5>
-					<div class="code">
+					<div class="code-wrapper">
 						<p>
 							&ltform&gt<br>
 							&nbsp&nbspE-mail:<br>
@@ -93,7 +93,7 @@
 						</p>
 					</div>
 					<h5>Result</h5>
-					<div class="result">		
+					<div class="result-wrapper">		
 						<form>
 							E-mail:
 							<input type="email" name="email">
@@ -109,7 +109,7 @@
 					</p> 
 					<h4>Example</h4>
 					<h5>HTML5</h5>
-					<div class="code">
+					<div class="code-wrapper">
 						<p>
 							&ltform&gt<br>
 							&nbsp&nbspAdd your homepage:<br>
@@ -118,7 +118,7 @@
 						</p>
 					</div>
 					<h5>Result</h5>
-					<div class="result">
+					<div class="result-wrapper">
 						<form>
 							Add your homepage:
 							<input type="url" name="homepage">
@@ -134,7 +134,7 @@
 					</p> 
 					<h4>Example</h4>
 					<h5>HTML5</h5>
-					<div class="code">
+					<div class="code-wrapper">
 						<p>
 							&ltform&gt<br>
 							&nbsp&nbspTelephone:<br>
@@ -143,7 +143,7 @@
 						</p>
 					</div>
 					<h5>Result</h5>
-					<div class="result">
+					<div class="result-wrapper">
 						<form>
 							Telephone:
 							<input type="tel" name="usrtel">
@@ -162,7 +162,7 @@
 					</p> 
 					<h4>Example</h4>
 					<h5>HTML5</h5>
-					<div class="code">
+					<div class="code-wrapper">
 						<p>
 							&ltform&gt<br>
 							&nbsp&nbspEnter a number (between 1 and 5):<br>
@@ -172,7 +172,7 @@
 						</p>
 					</div>
 					<h5>Result</h5>
-					<div class="result">
+					<div class="result-wrapper">
 						<form>
 							Enter a number (between 1 and 5):
 							<input type="number" name="number" min="1" max="5">
@@ -190,7 +190,7 @@
 					</p> 
 					<h4>Example</h4>
 					<h5>HTML5</h5>
-					<div class="code">
+					<div class="code-wrapper">
 						<p>
 							&ltform&gt<br>
 							&nbsp&nbsp&ltp&gtRange (0-50):&lt/p&gt<br>
@@ -200,7 +200,7 @@
 						</p>
 					</div>
 					<h5>Result</h5>
-					<div class="result">
+					<div class="result-wrapper">
 						<form>
 							Range (0-50):
 							<input type="range" name="points" min="0" max="50">
@@ -216,7 +216,7 @@
 					</p> 
 					<h4>Example</h4>
 					<h5>HTML5</h5>
-					<div class="code">
+					<div class="code-wrapper">
 						<p>
 							&ltform&gt<br>
 							&nbsp&nbspSelect a month:<br>
@@ -225,7 +225,7 @@
 						</p>
 					</div>
 					<h5>Result</h5>
-					<div class="result">
+					<div class="result-wrapper">
 						<form>
 							Select a month:
 							<input type="month" name="month-year">
@@ -241,7 +241,7 @@
 					</p> 
 					<h4>Example</h4>
 					<h5>HTML5</h5>
-					<div class="code">
+					<div class="code-wrapper">
 						<p>
 							&ltform&gt<br>
 							&nbsp&nbspSelect a week:<br>
@@ -250,7 +250,7 @@
 						</p>
 					</div>
 					<h5>Result</h5>
-					<div class="result">
+					<div class="result-wrapper">
 						<form>
 							Select a week:
 							<input type="week" name="week-year">
@@ -266,7 +266,7 @@
 					</p> 
 					<h4>Example</h4>
 					<h5>HTML5</h5>
-					<div class="code">
+					<div class="code-wrapper">
 						<p>
 							&ltform&gt<br>
 							&nbsp&nbspBirthday:<br>
@@ -275,7 +275,7 @@
 						</p>
 					</div>
 					<h5>Result</h5>
-					<div class="result">
+					<div class="result-wrapper">
 						<form>
 							Birthday:
 							<input type="date" name="birthday">
@@ -292,7 +292,7 @@
 					</p> 
 					<h4>Example</h4>
 					<h5>HTML5</h5>
-					<div class="code">
+					<div class="code-wrapper">
 						<p>
 							&ltform&gt<br>
 							&nbsp&nbspExam (date and time):<br>
@@ -301,7 +301,7 @@
 						</p>
 					</div>
 					<h5>Result</h5>
-					<div class="result">
+					<div class="result-wrapper">
 						<form>
 							Exam (date and time):
 							<input type="datetime-local" name="exam-time">
@@ -317,7 +317,7 @@
 					</p> 
 					<h4>Example</h4>
 					<h5>HTML5</h5>
-					<div class="code">
+					<div class="code-wrapper">
 						<p>
 							&ltform&gt<br>
 							&nbsp&nbspExam (date and time):<br>
@@ -326,7 +326,7 @@
 						</p>
 					</div>
 					<h5>Result</h5>
-					<div class="result">
+					<div class="result-wrapper">
 						<form>
 							Exam (date and time):
 							<input type="datetime" name="exam-time">
@@ -346,7 +346,7 @@
 					</p> 
 					<h4>Example</h4>
 					<h5>HTML5</h5>
-					<div class="code">
+					<div class="code-wrapper">
 						<p>
 							&ltform&gt<br>
 							&nbsp&nbspSelect a time:<br>
@@ -355,7 +355,7 @@
 						</p>
 					</div>
 					<h5>Result</h5>
-					<div class="result">
+					<div class="result-wrapper">
 						<form>
 							Select a time:
 							<input type="time" name="usrtime">
@@ -371,7 +371,7 @@
 					</p> 
 					<h4>Example</h4>
 					<h5>HTML5</h5>
-					<div class="code">
+					<div class="code-wrapper">
 						<p>
 							&ltform&gt<br>
 							&nbsp&nbspPick a color:<br>
@@ -380,7 +380,7 @@
 						</p>
 					</div>
 					<h5>Result</h5>
-					<div class="result">
+					<div class="result-wrapper">
 						<form>
 							Pick a color:
 							<input type="color" name="usrcolor">
