--- a/updated-tags.html
+++ b/updated-tags.html
@@ -31,7 +31,7 @@
 			<article>
 				<header>
 					<h2>Updated Tags</h2>
-					<div id="author-date">
+					<div class="byline-wrapper">
 						<img src="images/id.jpg" alt="id photo" width="40px">
 						<p>
 							<a href="mailto:marios.sofokleous@yandex.com">Marios Sofokleous</a>
@@ -49,7 +49,7 @@
 						use the "class" attribute to make "i" more semantic.
 					</p>
 					<h4>Examples</h4>
-					<div class="code">
+					<div class="code-wrapper">
 						<ul>
 							<li><i class="thought">I hope this works</i>, he thought.</li>
 							<li>
@@ -82,7 +82,7 @@
 						tag.
 					</p>
 					<h4>Examples</h4>
-					<div class="code">
+					<div class="code-wrapper">
 						<ul>
 							<li>
 								<b class="lead">The event takes place this upcoming Saturday, and 
@@ -99,7 +99,7 @@
 						pronunciation on a word.
 					</p>
 					<h4>Examples</h4>
-					<div class="code">
+					<div class="code-wrapper">
 						<ul>
 							<li>Call a doctor <em>now!</em></li>
 							<li>I <em>love</em> swimming</li>
@@ -111,7 +111,7 @@
 					<h4>Description</h4> 
 					<p>Strong importance.</p>
 					<h4>Examples</h4>
-					<div class="code">
+					<div class="code-wrapper">
 						<ul>
 							<li>
 								<strong>Warning!</strong> This is <strong>very dangerous</strong>.
