--- a/new-input-attributes.html
+++ b/new-input-attributes.html
@@ -31,7 +31,7 @@
 			<article>
 				<header>
 					<h2>New Input Attributes</h2>
-					<div id="author-date">
+					<div class="byline-wrapper">
 						<img src="images/id.jpg" alt="id photo" width="40px">
 						<p>
 							<a href="mailto:marios.sofokleous@yandex.com">Marios Sofokleous</a>
@@ -78,7 +78,7 @@
 					</p> 
 					<h4>Example</h4>
 					<h5>HTML5</h5>
-					<div class="code">
+					<div class="code-wrapper">
 						<p>
 							&ltinput type="text" name="first-name" 
 							placeholder="First name"&gt<br>
@@ -87,7 +87,7 @@
 						</p>
 					</div>
 					<h5>Result</h5>
-					<div class="result">
+					<div class="result-wrapper">
 						<form>
 							<input type="text" name="first-name" placeholder="First name">
 							<input type="text" name="last-name" placeholder="Last name">
@@ -104,7 +104,7 @@
 					</p> 
 					<h4>Example</h4>
 					<h5>HTML5</h5>
-					<div class="code">
+					<div class="code-wrapper">
 						<p>
 							&ltform&gt<br>
 							&nbsp&nbspUsername:&ltinput type="text" name="username" 
@@ -114,7 +114,7 @@
 						</p>
 					</div>
 					<h5>Result</h5>
-					<div class="result">
+					<div class="result-wrapper">
 						<form>
 							Username:<input type="text" name="username" autofocus>
 							Password:<input type="password" name="userpsw">
@@ -132,7 +132,7 @@
 					</p>
 					<h4>Example</h4>
 					<h5>HTML5</h5>
-					<div class="code">
+					<div class="code-wrapper">
 						<p>
 							&ltform&gt<br>
 				  		&nbsp&nbspUsername: &ltinput type="text" name="username" 
@@ -145,7 +145,7 @@
 						</p>
 					</div>
 					<h5>Result</h5>
-					<div class="result">
+					<div class="result-wrapper">
 						<form>
 				  		Username: <input type="text" name="username" required>
 				  		<input type="submit">
