--- a/updated-elements.html
+++ b/updated-elements.html
@@ -31,7 +31,7 @@
 			<article>
 				<header>
 					<h2>Updated Elements</h2>
-					<div id="author-date">
+					<div class="byline-wrapper">
 						<img src="images/id.jpg" alt="id photo" width="40px">
 						<p>
 							<a href="mailto:marios.sofokleous@yandex.com">Marios Sofokleous</a>
@@ -42,7 +42,7 @@
 				</header>
 				<section>
 					<h4>Example:</h4>
-					<div class="code">
+					<div class="code-wrapper">
 						<p>
 							&lt!DOCTYPE html&gt (1)<br>
 							&lthtml&gt<br>
