Change <h1> to 'Front-end Web Development'

--- a/home.html
+++ b/home.html
@@ -10,11 +10,11 @@
 		<meta charset="UTF-8">
   	<meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0;">
   	<link rel="stylesheet" href="main.css">
-		<title>HTML5 New Features</title>
+		<title>Home</title>
 	</head>
 	<body>
 		<header>
-			<h1>HTML5 New Features</h1>
+			<h1>Front-end Web Development</h1>
 			<nav>
       	<ul>
 	      	<li><a id="current" href="home.html">Home</a></li>
