--- a/new-input-attributes.html
+++ b/new-input-attributes.html
@@ -14,7 +14,7 @@
 	</head>
 	<body>
 		<header>
-			<h1>HTML5 New Features</h1>
+			<h1>Front-end Web Development</h1>
 			<nav>
       	<ul>
 	      	<li><a href="home.html">Home</a></li>
