Add navigation bar with dropdown menu items

--- a/updated-tags.html
+++ b/updated-tags.html
@@ -16,16 +16,63 @@
 		<header>
 			<h1>Front-end Web Development</h1>
 			<nav>
-      	<ul>
-	      	<li><a href="home.html">Home</a></li>
-	        <li><a id="current" href="updated-tags.html">Updated Tags</a></li>
-	    		<li><a href="updated-elements.html">Updated Elements</a></li>
-	    		<li><a href="new-elements.html">New Elements</a></li>
-	    		<li><a href="new-input-types.html">New Input Types</a></li>
-	    		<li><a href="new-input-attributes.html">New Input Attributes</a></li>
-	    		<li><a href="new-form-elements.html">New Form Elements</a></li>
-	    	</ul>
-			</nav>
+      	<a href="home.html">Home</a>
+      		<div class="dropdown">
+      			<button class="dropbtn">HTML</button>
+      			<div class="dropdown-content">
+      				<a href="">1</a>
+      				<a href="">2</a>
+      				<a href="">3</a>
+      				<a href="">4</a>
+      				<a href="">5</a>
+      				<a href="">6</a>
+      			</div>
+      		</div>
+					<div class="dropdown">
+      			<button class="dropbtn">HTML5</button>
+      			<div class="dropdown-content">
+      				<a href="updated-tags.html">Updated Tags</a>
+      				<a href="updated-elements.html">Updated Elements</a>
+      				<a href="new-elements.html">New Elements</a>
+      				<a href="new-input-types.html">New Input Types</a>
+      				<a href="new-input-attributes.html">New Input Attributes</a>
+      				<a href="new-form-elements.html">New Form Elements</a>
+      			</div>
+      		</div>
+      		<div class="dropdown">
+      			<button class="dropbtn">CSS</button>
+      			<div class="dropdown-content">
+      				<a href="">1</a>
+      				<a href="">2</a>
+      				<a href="">3</a>
+      				<a href="">4</a>
+      				<a href="">5</a>
+      				<a href="">6</a>
+      			</div>
+      		</div>
+      		<div class="dropdown">
+      			<button class="dropbtn">CSS3</button>
+      			<div class="dropdown-content">
+      				<a href="">1</a>
+      				<a href="">2</a>
+      				<a href="">3</a>
+      				<a href="">4</a>
+      				<a href="">5</a>
+      				<a href="">6</a>
+      			</div>
+      		</div>
+      		<div class="dropdown">
+      			<button class="dropbtn">JavaScript</button>
+      			<div class="dropdown-content">
+      				<a href="">1</a>
+      				<a href="">2</a>
+      				<a href="">3</a>
+      				<a href="">4</a>
+      				<a href="">5</a>
+      				<a href="">6</a>
+      			</div>
+      		</div>
+  		</nav>
 		</header>
 		<main role="main">
 			<article>
