--- a/new-form-elements.html
+++ b/new-form-elements.html
@@ -18,7 +18,7 @@
 			<nav>
       	<a href="home.html">Home</a>
       		<div class="dropdown">
-      			<button class="dropbtn">HTML</button>
+      			<button class="dropbtn">HTML<span class="arrow">&#9660;</span></button>
       			<div class="dropdown-content">
       				<a href="">1</a>
       				<a href="">2</a>
@@ -29,7 +29,7 @@
       			</div>
       		</div>
 					<div class="dropdown">
-      			<button class="dropbtn">HTML5</button>
+      			<button class="dropbtn">HTML5<span class="arrow">&#9660;</span></button>
       			<div class="dropdown-content">
       				<a href="updated-tags.html">Updated Tags</a>
       				<a href="updated-elements.html">Updated Elements</a>
@@ -40,7 +40,7 @@
       			</div>
       		</div>
       		<div class="dropdown">
-      			<button class="dropbtn">CSS</button>
+      			<button class="dropbtn">CSS<span class="arrow">&#9660;</span></button>
       			<div class="dropdown-content">
       				<a href="">1</a>
       				<a href="">2</a>
@@ -51,7 +51,7 @@
       			</div>
       		</div>
       		<div class="dropdown">
-      			<button class="dropbtn">CSS3</button>
+      			<button class="dropbtn">CSS3<span class="arrow">&#9660;</span></button>
       			<div class="dropdown-content">
       				<a href="">1</a>
       				<a href="">2</a>
@@ -62,7 +62,7 @@
       			</div>
       		</div>
       		<div class="dropdown">
-      			<button class="dropbtn">JavaScript</button>
+      			<button class="dropbtn">JavaScript<span class="arrow">&#9660;</span></button>
       			<div class="dropdown-content">
       				<a href="">1</a>
       				<a href="">2</a>
