--- a/home.html
+++ b/home.html
@@ -16,7 +16,7 @@
 		<header>
 			<h1>Front-end Web Development</h1>
 			<nav>
-      	<a href="home.html">Home</a>
+      	<a id="current" href="home.html">Home</a>
       	<div class="dropdown">
       		<button class="dropbtn">HTML<span class="arrow">&#9660;</span></button>
       		<div class="dropdown-content">
