--- a/updated-elements.html
+++ b/updated-elements.html
@@ -29,7 +29,7 @@
       		</div>
       	</div>
 				<div class="dropdown">
-      		<button class="dropbtn">HTML5<span class="arrow">&#9660;</span></button>
+      		<button id="current" class="dropbtn">HTML5<span class="arrow">&#9660;</span></button>
       		<div class="dropdown-content">
       			<a href="updated-tags.html">Updated Tags</a>
       			<a href="updated-elements.html">Updated Elements</a>
