Add default & 'on hover' opacity behavior for social icons

--- a/updated-tags.html
+++ b/updated-tags.html
@@ -170,19 +170,19 @@
 		</main>
 		<footer>
 			<a href="">
-				<img src="images/googleplus-logo.png" alt="google plus logo" width="30px">
+				<img src="images/googleplus-logo.png" alt="google plus logo" width="30px" class="social-icon">
 			</a>
 			<a href="">
-				<img src="images/fb-logo.png" alt="facebook logo" width="30px">
+				<img src="images/fb-logo.png" alt="facebook logo" width="30px" class="social-icon">
 			</a>
 			<a href="">
-				<img src="images/instagram-logo.png" alt="instagram logo" width="30px">
+				<img src="images/instagram-logo.png" alt="instagram logo" width="30px" class="social-icon">
 			</a>
 			<a href="">
-				<img src="images/linkedin-logo.png" alt="linkedin logo" width="30px">
+				<img src="images/linkedin-logo.png" alt="linkedin logo" width="30px" class="social-icon">
 			</a>
 			<a href="">
-				<img src="images/twitter-logo.png" alt="twitter logo" width="30px">
+				<img src="images/twitter-logo.png" alt="twitter logo" width="30px" class="social-icon">
 			</a>
   		<address>
     		&copy 2017 <a href="mailto:pictureelement@yandex.com">PictureElement</a>
