Rename avatar icon to 'avatar'

--- a/updated-elements.html
+++ b/updated-elements.html
@@ -79,7 +79,7 @@
 				<header>
 					<h2>Updated Elements</h2>
 					<div class="byline-wrapper">
-						<img src="images/PE-logo.png" alt="PictureElement logo" width="40px">
+						<img src="images/avatar.png" alt="avatar" width="40px">
 						<p>
 							<a href="mailto:pictureelement@yandex.com">PictureElement</a>
 							<br>
