Add color.html, rename css-selectors.html to selectors.html

--- a/home.html
+++ b/home.html
@@ -42,8 +42,8 @@
       	<div class="dropdown">
       		<button class="dropbtn">CSS<span class="arrow">&#9660;</span></button>
       		<div class="dropdown-content">
-      			<a href="css-selectors.html">CSS Selectors</a>
-      			<a href="">2</a>
+      			<a href="selectors.html">Selectors</a>
+      			<a href="color.html">Color</a>
       			<a href="">3</a>
       			<a href="">4</a>
       			<a href="">5</a>
@@ -93,7 +93,7 @@
 					<p>
 						HTML5 provides better-defined semantic roles for existing elements 
 						and adds new elements with useful semantics. Therefore the use of
-						&ltdiv&gt elements is kept at minimum, making the page a bit more 
+						&lt;div&gt; elements is kept at minimum, making the page a bit more 
 						semantic, but more importantly, easier to read.
 					</p>
 				</section>
@@ -102,8 +102,8 @@
 					<h4>Description</h4>
 					<p>
 						Features that previously were only availbale through JS have been 
-						added directly to HTML5, such as &ltcanvas&gt, &ltvideo&gt, and 
-						&ltaudio&gt. Local storage and new input types for which the browser 
+						added directly to HTML5, such as &lt;canvas&gt;, &lt;video&gt;, and 
+						&lt;audio&gt;. Local storage and new input types for which the browser 
 						can expose easy user interfaces (no JS code required) have also been
 						added. HTML5 also allows JS and browser interface to run in separate 
 						threads. Furthermore unlike its predecessor, HTML5 made it extremely
@@ -115,8 +115,8 @@
 					<h3>Consistency in Handling Malformed Documents</h3>
 					<h4>Description</h4>
 					<p>
-						HTML supports "tag soup"(i.e. &ltp&gtThis is a malformed fragment of
-						&ltem&gtHTML.&lt/p&gt&lt/em&gt) or the ability to write malformed 
+						HTML supports "tag soup"(i.e. &lt;p&gt;This is a malformed fragment of
+						&lt;em&gt;HTML.&lt;/p&gt;&lt;/em&gt;) or the ability to write malformed 
 						code that is syntactically or structurally incorrect. Prior to 
 						HTML5, there was no standard way to correct malformed code in order 
 						to be displayed correclty in the browser. Before, new browser 
