--- a/new-form-elements.html
+++ b/new-form-elements.html
@@ -42,8 +42,8 @@
       	<div class="dropdown">
       		<button class="dropbtn">CSS<span class="arrow">&#9660;</span></button>
       		<div class="dropdown-content">
-      			<a href="css-selectors.html">CSS Selectors</a>
-      			<a href="">2</a>
+      			<a href="selectors.html">Selectors</a>
+      			<a href="color.html">Color</a>
       			<a href="">3</a>
       			<a href="">4</a>
       			<a href="">5</a>
@@ -91,31 +91,31 @@
 					<h3>Datalist</h3>
 				 	<h4>Description</h4>
 				 	<p>
-				 		The &ltdatalist&gt element specifies a list of pre-defined options for
-				 		an &ltinput&gt element. Users will see a drop-down list of pre-defined 
+				 		The &lt;datalist&gt; element specifies a list of pre-defined options for
+				 		an &lt;input&gt; element. Users will see a drop-down list of pre-defined 
 				 		options and auto-complete suggestions as they input data.
 					</p> 
 					<h4>Example:</h4>
 					<h5>HTML5</h5>
 					<div class="code-wrapper">
 						<p>
-							&ltform&gt<br>
-							&nbsp&nbspChoose an OS:<br>
-							&nbsp&nbsp&ltinput list="operating systems"&gt<br>
-							&nbsp&nbsp&ltdatalist id="operating systems"&gt<br>
-							&nbsp&nbsp&nbsp&nbsp&ltoption value="Windows"&gt<br>
-							&nbsp&nbsp&nbsp&nbsp&ltoption value="macOS"&gt<br>
-							&nbsp&nbsp&nbsp&nbsp&ltoption value="Linux"&gt<br>
-							&nbsp&nbsp&nbsp&nbsp&ltoption value="Solaris"&gt<br>
-							&nbsp&nbsp&nbsp&nbsp&ltoption value="FreeBSD"&gt<br>
-							&nbsp&nbsp&lt/datalist&gt<br>
-							&lt/form&gt<br>
+							&lt;form&gt;<br>
+							&nbsp;&nbsp;Choose an OS:<br>
+							&nbsp;&nbsp;&lt;input list="operating systems"&gt;<br>
+							&nbsp;&nbsp;&lt;datalist id="operating systems"&gt;<br>
+							&nbsp;&nbsp;&nbsp;&nbsp;&lt;option value="Windows"&gt;<br>
+							&nbsp;&nbsp;&nbsp;&nbsp;&lt;option value="macOS"&gt;<br>
+							&nbsp;&nbsp;&nbsp;&nbsp;&lt;option value="Linux"&gt;<br>
+							&nbsp;&nbsp;&nbsp;&nbsp;&lt;option value="Solaris"&gt;<br>
+							&nbsp;&nbsp;&nbsp;&nbsp;&lt;option value="FreeBSD"&gt;<br>
+							&nbsp;&nbsp;&lt;/datalist&gt;<br>
+							&lt;/form&gt;<br>
 						</p>
 					</div>
 					<p>
 						<i class="notice">Notice:</i> The "list" and "id" attributes need to 
-						be the same. The &ltinput&gt element needs to know about the 
-						&ltdatalist&gt options.
+						be the same. The &lt;input&gt; element needs to know about the 
+						&lt;datalist&gt; options.
 					</p>
 					<h5>Result</h5>
 					<div class="result-wrapper">
@@ -136,7 +136,7 @@
 					<h3>Keygen</h3>
 					<h4>Description</h4>
 					<p>
-						The purpose of the &ltkeygen&gt element is to provide a secure way to 
+						The purpose of the &lt;keygen&gt; element is to provide a secure way to 
 						authenticate users.
 					</p>
 				</section>
@@ -144,7 +144,7 @@
 					<h3>Output</h3>
 					<h4>Description</h4>
 					<p>
-						The &ltoutput&gt element represents the result of a 
+						The &lt;output&gt; element represents the result of a 
 						calculation(like one performed by a script).
 					</p> 
 				</section>
