--- a/selectors.html
+++ b/selectors.html
@@ -42,8 +42,8 @@
       	<div class="dropdown">
       		<button class="dropbtn">CSS<span class="arrow">&#9660;</span></button>
       		<div class="dropdown-content">
-      			<a href="css-selectors.html">CSS Selectors</a>
-      			<a href="">2</a>
+      			<a href="selectors.html">Selectors</a>
+      			<a href="color.html">Color</a>
       			<a href="">3</a>
       			<a href="">4</a>
       			<a href="">5</a>
@@ -77,7 +77,7 @@
     <main role="main">
       <article>
         <header>
-          <h2>CSS Selectors</h2>
+          <h2>Selectors</h2>
           <div class="byline-wrapper">
             <img src="images/avatar.png" alt="avatar" width="40px">
             <p>
@@ -88,7 +88,7 @@
           </div>
         </header>
         <section>
-          <h3>CSS Descendant Selector</h3>
+          <h3>Descendant Selector</h3>
           <h4>Description</h4>
           <p>
             To apply a CSS rule to a single tag or a subset of tags we use a 
@@ -104,12 +104,12 @@
             </p>
           </div>
           <p>
-            The CSS rule above selects only &ltli&gt tags that are children of 
-            &ltul&gt tags.
+            The CSS rule above selects only &lt;li&gt; tags that are children of 
+            &lt;ul&gt; tags.
           </p>
         </section>
         <section>
-          <h3>CSS Pseudo-selector</h3>
+          <h3>Pseudo-selector</h3>
           <h4>Description</h4>
           <p>
             A modifier that can be added to a selector to select a tag only when
@@ -139,10 +139,10 @@
           <div class="code-wrapper">
             <p>
               ...<br>
-              &ltul&gt<br>
-                &ltli&gt2 egss&lt/li&gt<br>
-                &ltli&gt1 pound of sugar&lt/li&gt<br>
-              &lt/ul&gt<br>
+              &lt;ul&gt;<br>
+                &lt;li&gt;2 egss&lt;/li&gt;<br>
+                &lt;li&gt;1 pound of sugar&lt;/li&gt;<br>
+              &lt;/ul&gt;<br>
               ...<br>
             </p>
           </div>
