--- a/updated-elements.html
+++ b/updated-elements.html
@@ -42,8 +42,8 @@
       	<div class="dropdown">
       		<button class="dropbtn">CSS<span class="arrow">&#9660;</span></button>
       		<div class="dropdown-content">
-      			<a href="css-selectors.html">CSS Selectors</a>
-      			<a href="">2</a>
+      			<a href="selectors.html">Selectors</a>
+      			<a href="color.html">Color</a>
       			<a href="">3</a>
       			<a href="">4</a>
       			<a href="">5</a>
@@ -91,19 +91,19 @@
 					<h4>Example:</h4>
 					<div class="code-wrapper">
 						<p>
-							&lt!DOCTYPE html&gt (1)<br>
-							&lthtml&gt<br>
-							&nbsp&nbsp&lthead&gt<br>
-							&nbsp&nbsp&nbsp&nbsp&ltmeta charset="UTF-8"&gt (2)<br>
-							&nbsp&nbsp&nbsp&nbsp&ltlink rel="stylesheet" href="foo.css"&gt 
+							&lt;!DOCTYPE html&gt; (1)<br>
+							&lt;html&gt;<br>
+							&nbsp;&nbsp;&lt;head&gt;<br>
+							&nbsp;&nbsp;&nbsp;&nbsp;&lt;meta charset="UTF-8"&gt; (2)<br>
+							&nbsp;&nbsp;&nbsp;&nbsp;&lt;link rel="stylesheet" href="foo.css"&gt; 
 							(3)<br>
-							&nbsp&nbsp&nbsp&nbsp&ltscript src="foo.js"&gt&lt/script&gt (4.1)<br>
-							&nbsp&nbsp&nbsp&nbsp&ltscript&gt<i>JS code</i>&lt/script&gt 
+							&nbsp;&nbsp;&nbsp;&nbsp;&lt;script src="foo.js"&gt;&lt;/script&gt; (4.1)<br>
+							&nbsp;&nbsp;&nbsp;&nbsp;&lt;script&gt;<i>JS code</i>&lt;/script&gt; 
 							(4.2)<br>
-							&nbsp&nbsp&nbsp&nbsp...<br>
-							&nbsp&nbsp&lt/head&gt<br>
-							&nbsp&nbsp...<br>
-							&lt/html&gt
+							&nbsp;&nbsp;&nbsp;&nbsp;...<br>
+							&nbsp;&nbsp;&lt;/head&gt;<br>
+							&nbsp;&nbsp;...<br>
+							&lt;/html&gt;
 						</p>
 					</div>
 					<h4>Description:</h4>
