--- a/new-elements.html
+++ b/new-elements.html
@@ -42,8 +42,8 @@
       	<div class="dropdown">
       		<button class="dropbtn">CSS<span class="arrow">&#9660;</span></button>
       		<div class="dropdown-content">
-      			<a href="css-selectors.html">CSS Selectors</a>
-      			<a href="">2</a>
+      			<a href="selectors.html">Selectors</a>
+      			<a href="color.html">Color</a>
       			<a href="">3</a>
       			<a href="">4</a>
       			<a href="">5</a>
@@ -106,21 +106,21 @@
 					<h5>HTML (Prior to HTML5)</h5>
 					<div class="code-wrapper">
 						<p>
-							&ltdiv class="section"&gt<br>
-							&nbsp&nbsp&lth2&gtBlog&lt/h2&gt<br>
-							&nbsp&nbsp&ltp&gtThis is the Art Gallery blog.&ltp&gt<br>
-							&nbsp&nbsp...<br>
-							&lt/div&gt<br>
+							&lt;div class="section"&gt;<br>
+							&nbsp;&nbsp;&lt;h2&gt;Blog&lt;/h2&gt;<br>
+							&nbsp;&nbsp;&lt;p&gt;This is the Art Gallery blog.&lt;p&gt;<br>
+							&nbsp;&nbsp;...<br>
+							&lt;/div&gt;<br>
 						</p>
 					</div>
 					<h5>HTML5</h5>
 					<div class="code-wrapper">
 						<p>
-							&ltsection&gt<br>
-							&nbsp&nbsp&lth2&gtBlog&lt/h2&gt<br>
-							&nbsp&nbsp&ltp&gtThis is the Art Gallery blog.&ltp&gt<br>
-							&nbsp&nbsp...<br>
-							&lt/section&gt<br>
+							&lt;section&gt;<br>
+							&nbsp;&nbsp;&lt;h2&gt;Blog&lt;/h2&gt;<br>
+							&nbsp;&nbsp;&lt;p&gt;This is the Art Gallery blog.&lt;p&gt;<br>
+							&nbsp;&nbsp;...<br>
+							&lt;/section&gt;<br>
 						</p>
 					</div>
 					<p>
@@ -142,21 +142,21 @@
 					<h5>HTML (Prior to HTML5)</h5>
 					<div class="code-wrapper">
 						<p>
-							&ltdiv class="header"&gt<br>
-							&nbsp&nbsp&lth1&gtArt Gallery Blog&lt/h1&gt<br>
-							&nbsp&nbsp&ltp&gtCovering all the Art Galleries across the globe
-							&lt/p&gt<br>
-							&lt/div&gt<br>
+							&lt;div class="header"&gt;<br>
+							&nbsp;&nbsp;&lt;h1&gt;Art Gallery Blog&lt;/h1&gt;<br>
+							&nbsp;&nbsp;&lt;p&gt;Covering all the Art Galleries across the globe
+							&lt;/p&gt;<br>
+							&lt;/div&gt;<br>
 						</p>
 					</div>
 					<h5>HTML5</h5>
 					<div class="code-wrapper">
 						<p>
-							&ltheader&gt<br>
-							&nbsp&nbsp&lth1&gtArt Gallery Blog&lt/h1&gt<br>
-							&nbsp&nbsp&ltp&gtCovering all the Art Galleries across the globe
-							&lt/p&gt<br>
-							&lt/header&gt<br>
+							&lt;header&gt;<br>
+							&nbsp;&nbsp;&lt;h1&gt;Art Gallery Blog&lt;/h1&gt;<br>
+							&nbsp;&nbsp;&lt;p&gt;Covering all the Art Galleries across the globe
+							&lt;/p&gt;<br>
+							&lt;/header&gt;<br>
 						</p>
 					</div>
 					<p>
@@ -178,17 +178,17 @@
 					<h5>HTML (Prior to HTML5)</h5>
 					<div class="code-wrapper">
 						<p>
-							&ltdiv class="footer"&gt<br>
-							&nbsp&nbsp&ltp&gt&copy; Art Gallery 2017&lt/p&gt<br>
-							&lt/div&gt<br>
+							&lt;div class="footer"&gt;<br>
+							&nbsp;&nbsp;&lt;p&gt;&copy; Art Gallery 2017&lt;/p&gt;<br>
+							&lt;/div&gt;<br>
 						</p>
 					</div>
 					<h5>HTML5</h5>
 					<div class="code-wrapper">
 						<p>
-							&ltfooter&gt<br>
-							&nbsp&nbsp&ltp&gt&copy; Art Gallery 2017&lt/p&gt<br>
-							&lt/footer&gt<br>
+							&lt;footer&gt;<br>
+							&nbsp;&nbsp;&lt;p&gt;&copy; Art Gallery 2017&lt;/p&gt;<br>
+							&lt;/footer&gt;<br>
 						</p>
 					</div>
 					<p>
@@ -208,14 +208,14 @@
 					<h5>HTML5</h5>
 					<div class="code-wrapper">
 						<p>
-							&ltfooter&gt<br>
-							&nbsp&nbsp&ltaddress&gt<br>
-							&nbsp&nbsp&nbsp&nbspBy &lta 
+							&lt;footer&gt;<br>
+							&nbsp;&nbsp;&lt;address&gt;<br>
+							&nbsp;&nbsp;&nbsp;&nbsp;By &lt;a 
 							href="mailto:pictureelement@yandex.com"
-							&gtPictureElement&lt/a&gt<br>
-							&nbsp&nbsp&lt/address&gt<br>
-							&nbsp&nbsp&ltp&gtCopyright PictureElement 2017&lt/p&gt<br>
-							&lt\footer&gt<br>
+							&gt;PictureElement&lt;/a&gt;<br>
+							&nbsp;&nbsp;&lt;/address&gt;<br>
+							&nbsp;&nbsp;&lt;p&gt;Copyright PictureElement 2017&lt;/p&gt;<br>
+							&lt;\footer&gt;<br>
 						</p>
 					</div>
 				</section>
@@ -240,17 +240,17 @@
 					<h5>HTML (Prior to HTML5)</h5>
 					<div class="code-wrapper">
 						<p>
-							&ltdiv class="sidebar"&gt<br>
-							&nbsp&nbsp...<br>
-							&lt/div&gt<br>
+							&lt;div class="sidebar"&gt;<br>
+							&nbsp;&nbsp;...<br>
+							&lt;/div&gt;<br>
 						</p>
 					</div>
 					<h5>HTML5</h5>
 					<div class="code-wrapper">
 						<p>
-							&ltaside&gt<br>
-							&nbsp&nbsp...<br>
-							&lt/aside&gt<br>
+							&lt;aside&gt;<br>
+							&nbsp;&nbsp;...<br>
+							&lt;/aside&gt;<br>
 						</p>
 					</div>
 					<p>
@@ -275,19 +275,19 @@
 					<h5>HTML (Prior to HTML5)</h5>
 					<div class="code-wrapper">
 						<p>
-							&ltul class="nav"&gt<br>
-							&nbsp&nbsp...<br>
-							&lt/ul&gt<br>
+							&lt;ul class="nav"&gt;<br>
+							&nbsp;&nbsp;...<br>
+							&lt;/ul&gt;<br>
 						</p>
 					</div>
 					<h5>HTML5</h5>
 					<div class="code-wrapper">
 						<p>
-							&ltnav&gt<br>
-							&nbsp&nbsp&ltul&gt<br>
-					 		&nbsp&nbsp&nbsp&nbsp...<br>
-					 		&nbsp&nbsp&lt/ul&gt<br>
-							&lt/nav&gt<br>
+							&lt;nav&gt;<br>
+							&nbsp;&nbsp;&lt;ul&gt;<br>
+					 		&nbsp;&nbsp;&nbsp;&nbsp;...<br>
+					 		&nbsp;&nbsp;&lt;/ul&gt;<br>
+							&lt;/nav&gt;<br>
 						</p>
 					</div>
 					<p>
@@ -313,17 +313,17 @@
 					<h5>HTML (Prior to HTML5)</h5>
 					<div class="code-wrapper">
 						<p>
-							&ltdiv class="article"&gt<br>
-							&nbsp&nbsp...<br>
-							&lt/div&gt<br>
+							&lt;div class="article"&gt;<br>
+							&nbsp;&nbsp;...<br>
+							&lt;/div&gt;<br>
 						</p>
 					</div>
 					<h5>HTML5</h5>
 					<div class="code-wrapper">
 						<p>
-							&ltarticle&gt<br>
-							&nbsp&nbsp...<br>
-							&lt/article&gt<br>
+							&lt;article&gt;<br>
+							&nbsp;&nbsp;...<br>
+							&lt;/article&gt;<br>
 						</p>
 					</div>
 					<p>
@@ -345,17 +345,17 @@
 					<h5>HTML (Prior to HTML5)</h5>
 					<div class="code-wrapper">
 						<p>
-							&ltdiv class="main"&gt<br>
-							&nbsp&nbsp....<br>
-							&lt/div&gt<br>
+							&lt;div class="main"&gt;<br>
+							&nbsp;&nbsp;....<br>
+							&lt;/div&gt;<br>
 						</p>
 					</div>
 					<h5>HTML5</h5>
 					<div class="code-wrapper">
 						<p>	
-							&ltmain&gt<br>
-							&nbsp&nbsp...<br>
-							&lt/main&gt<br>
+							&lt;main&gt;<br>
+							&nbsp;&nbsp;...<br>
+							&lt;/main&gt;<br>
 						</p>
 					</div>
 					<p>
@@ -375,17 +375,17 @@
 					<h5>HTML (Prior to HTML5)</h5>
 					<div class="code-wrapper">
 						<p>
-							&ltdiv class="image"&gt<br>
-							&nbsp&nbsp&ltimg src="image.png" alt="My picture"&gt<br>
-							&lt/div&gt<br>
+							&lt;div class="image"&gt;<br>
+							&nbsp;&nbsp;&lt;img src="image.png" alt="My picture"&gt;<br>
+							&lt;/div&gt;<br>
 						</p>
 					</div>
 					<h5>HTML5</h5>
 					<div class="code-wrapper">
 						<p>
-							&ltfigure&gt<br>
-							&nbsp&nbsp&ltimg src="image.png" alt="My picture"&gt<br>
-							&lt/figure&gt<br>
+							&lt;figure&gt;<br>
+							&nbsp;&nbsp;&lt;img src="image.png" alt="My picture"&gt;<br>
+							&lt;/figure&gt;<br>
 						</p>
 					</div>
 					<p>
@@ -403,11 +403,11 @@
 					<h5>HTML5</h5>
 					<div class="code-wrapper">
 						<p>
-							&ltfigure&gt<br>
-							&nbsp&nbsp&ltimg src="image.png" alt="My picture"&gt<br>
-							&nbsp&nbsp&ltfigcaption&gtThis is a caption for the picture.
-							&lt/figcaption&gt<br>
-							&lt/figure&gt<br>
+							&lt;figure&gt;<br>
+							&nbsp;&nbsp;&lt;img src="image.png" alt="My picture"&gt;<br>
+							&nbsp;&nbsp;&lt;figcaption&gt;This is a caption for the picture.
+							&lt;/figcaption&gt;<br>
+							&lt;/figure&gt;<br>
 						</p>
 					</div>
 					<p>
@@ -424,11 +424,11 @@
 					<h4>Example</h4> 
 					<h5>HTML5</h5>
 					<div class="code-wrapper">
-						<p>&lttime&gt2013-09-16&lt/time&gt</p>
+						<p>&lt;time&gt;2013-09-16&lt;/time&gt;</p>
 						<p>
 							We can use the "datetime" attribute to get our desired format:<br>
-							&lttime datetime="2013-09-16"&gt16/09/13&lt/time&gt<br>
-							&lttime datetime="2013-09-16"&gtSeptember 16, 2013&lt/time&gt<br>
+							&lt;time datetime="2013-09-16"&gt;16/09/13&lt;/time&gt;<br>
+							&lt;time datetime="2013-09-16"&gt;September 16, 2013&lt;/time&gt;<br>
 							...
 						</p>
 					</div>
