--- a/new-input-attributes.html
+++ b/new-input-attributes.html
@@ -42,8 +42,8 @@
       	<div class="dropdown">
       		<button class="dropbtn">CSS<span class="arrow">&#9660;</span></button>
       		<div class="dropdown-content">
-      			<a href="css-selectors.html">CSS Selectors</a>
-      			<a href="">2</a>
+      			<a href="selectors.html">Selectors</a>
+      			<a href="color.html">Color</a>
       			<a href="">3</a>
       			<a href="">4</a>
       			<a href="">5</a>
@@ -88,7 +88,7 @@
 					</div>
 				</header>
 				<section>
-					<h4>HTML5 added the following attributes for the &ltinput&gt element:</h4>
+					<h4>HTML5 added the following attributes for the &lt;input&gt; element:</h4>
 					<ul>
 						<li>autocomplete</li>
 						<li><b class="covered">autofocus</b></li>
@@ -109,7 +109,7 @@
 						<li><b class="covered">required</b></li>
 						<li>step</li>
 					</ul>
-					<h4>HTML5 added the following attributes for the &ltform&gt element:</h4>
+					<h4>HTML5 added the following attributes for the &lt;form&gt; element:</h4>
 					<ul>
 						<li>autocomplete</li>
 						<li>novalidate</li>
@@ -127,10 +127,10 @@
 					<h5>HTML5</h5>
 					<div class="code-wrapper">
 						<p>
-							&ltinput type="text" name="first-name" 
-							placeholder="First name"&gt<br>
-							&ltinput type="text" name="last-name" placeholder="Last name"&gt<br>
-							&ltinput type="text" name="email" placeholder="email"&gt<br>
+							&lt;input type="text" name="first-name" 
+							placeholder="First name"&gt;<br>
+							&lt;input type="text" name="last-name" placeholder="Last name"&gt;<br>
+							&lt;input type="text" name="email" placeholder="email"&gt;<br>
 						</p>
 					</div>
 					<h5>Result</h5>
@@ -153,11 +153,11 @@
 					<h5>HTML5</h5>
 					<div class="code-wrapper">
 						<p>
-							&ltform&gt<br>
-							&nbsp&nbspUsername:&ltinput type="text" name="username" 
-							autofocus&gt<br>
-							&nbsp&nbspPassword:&ltinput type="password" name=:"psw"&gt<br>
-							&lt/form&gt<br>
+							&lt;form&gt;<br>
+							&nbsp;&nbsp;Username:&lt;input type="text" name="username" 
+							autofocus&gt;<br>
+							&nbsp;&nbsp;Password:&lt;input type="password" name=:"psw"&gt;<br>
+							&lt;/form&gt;<br>
 						</p>
 					</div>
 					<h5>Result</h5>
@@ -181,14 +181,14 @@
 					<h5>HTML5</h5>
 					<div class="code-wrapper">
 						<p>
-							&ltform&gt<br>
-				  		&nbsp&nbspUsername: &ltinput type="text" name="username" 
-				  		required&gt<br>
-				  		&nbsp&nbsp&ltinput type="submit"&gt<br>
-				  		&nbsp&nbspPassword: &ltinput type="password" name="userpsw" 
-				  		required&gt<br>
-				  		&nbsp&nbsp&ltinput type="submit"&gt<br>
-							&lt/form&gt<br>
+							&lt;form&gt;<br>
+				  		&nbsp;&nbsp;Username: &lt;input type="text" name="username" 
+				  		required&gt;<br>
+				  		&nbsp;&nbsp;&lt;input type="submit"&gt;<br>
+				  		&nbsp;&nbsp;Password: &lt;input type="password" name="userpsw" 
+				  		required&gt;<br>
+				  		&nbsp;&nbsp;&lt;input type="submit"&gt;<br>
+							&lt;/form&gt;<br>
 						</p>
 					</div>
 					<h5>Result</h5>
