--- a/new-input-types.html
+++ b/new-input-types.html
@@ -42,8 +42,8 @@
       	<div class="dropdown">
       		<button class="dropbtn">CSS<span class="arrow">&#9660;</span></button>
       		<div class="dropdown-content">
-      			<a href="css-selectors.html">CSS Selectors</a>
-      			<a href="">2</a>
+      			<a href="selectors.html">Selectors</a>
+      			<a href="color.html">Color</a>
       			<a href="">3</a>
       			<a href="">4</a>
       			<a href="">5</a>
@@ -93,7 +93,7 @@
 						particular input type, it defaults to "text".
 					</p>
 					<p>
-						<i class="notice">Notice 2:</i> The &ltform&gt tag is used to create 
+						<i class="notice">Notice 2:</i> The &lt;form&gt; tag is used to create 
 						an HTML form for user input.
 					</p>
 				</section>
@@ -101,17 +101,17 @@
 					<h3>Search</h3>
 					<h4>Description</h4>
 					<p>
-						&ltinput type="search"&gt is a one-line plain-text for entering one or 
+						&lt;input type="search"&gt; is a one-line plain-text for entering one or 
 						more search terms.
 					</p> 
 					<h4>Example</h4>
 					<h5>HTML5</h5>
 					<div class="code-wrapper">
 						<p>
-							&ltform&gt<br>
-							&nbsp&nbspSearch Google:<br>
-							&nbsp&nbsp&ltinput type="search" name="google-search"&gt<br>
-							&lt/form&gt<br>
+							&lt;form&gt;<br>
+							&nbsp;&nbsp;Search Google:<br>
+							&nbsp;&nbsp;&lt;input type="search" name="google-search"&gt;<br>
+							&lt;/form&gt;<br>
 						</p>
 					</div>
 					<h5>Result</h5>
@@ -126,17 +126,17 @@
 					<h3>Email</h3>
 					<h4>Description</h4>
 					<p>
-						&ltinput type="email"&gt is a regular text input, but with added 
+						&lt;input type="email"&gt; is a regular text input, but with added 
 						usability on mobile devices(i.e keyboard with email-related keys).
 					</p> 
 					<h4>Example</h4>
 					<h5>HTML5</h5>
 					<div class="code-wrapper">
 						<p>
-							&ltform&gt<br>
-							&nbsp&nbspE-mail:<br>
-							&nbsp&nbsp&ltinput type="email" name="email"&gt<br>
-							&lt/form&gt<br>
+							&lt;form&gt;<br>
+							&nbsp;&nbsp;E-mail:<br>
+							&nbsp;&nbsp;&lt;input type="email" name="email"&gt;<br>
+							&lt;/form&gt;<br>
 						</p>
 					</div>
 					<h5>Result</h5>
@@ -151,17 +151,17 @@
 					<h3>URL</h3>
 					<h4>Description</h4>
 					<p>
-						&ltinput type="url"&gt is a regular text input, but with added 
+						&lt;input type="url"&gt; is a regular text input, but with added 
 						usability on mobile devices(i.e. keyboard with URL-related keys).
 					</p> 
 					<h4>Example</h4>
 					<h5>HTML5</h5>
 					<div class="code-wrapper">
 						<p>
-							&ltform&gt<br>
-							&nbsp&nbspAdd your homepage:<br>
-							&nbsp&nbsp&ltinput type="url" name="homepage"&gt<br>
-							&lt/form&gt<br>
+							&lt;form&gt;<br>
+							&nbsp;&nbsp;Add your homepage:<br>
+							&nbsp;&nbsp;&lt;input type="url" name="homepage"&gt;<br>
+							&lt;/form&gt;<br>
 						</p>
 					</div>
 					<h5>Result</h5>
@@ -176,17 +176,17 @@
 					<h3>Tel</h3>
 					<h4>Description</h4> 
 					<p>
-						&ltinput type="tel"&gt is regular text input, but with added usability
+						&lt;input type="tel"&gt; is regular text input, but with added usability
 						on mobile devices(keyboard with digits).
 					</p> 
 					<h4>Example</h4>
 					<h5>HTML5</h5>
 					<div class="code-wrapper">
 						<p>
-							&ltform&gt<br>
-							&nbsp&nbspTelephone:<br>
-							&nbsp&nbsp&ltinput type="tel" name="usrtel"&gt<br>
-							&lt/form&gt<br>
+							&lt;form&gt;<br>
+							&nbsp;&nbsp;Telephone:<br>
+							&nbsp;&nbsp;&lt;input type="tel" name="usrtel"&gt;<br>
+							&lt;/form&gt;<br>
 						</p>
 					</div>
 					<h5>Result</h5>
@@ -201,7 +201,7 @@
 					<h3>Number</h3>
 					<h4>Description</h4>
 					<p>
-						&ltinput type="number"&gt represents a precise control for setting the 
+						&lt;input type="number"&gt; represents a precise control for setting the 
 						element's value to a string representing a number. In the browser we 
 						get a convinient control to the right side of the input that allows us 
 						to increase or decrease the value. The keyboard on mobile devices 
@@ -211,11 +211,11 @@
 					<h5>HTML5</h5>
 					<div class="code-wrapper">
 						<p>
-							&ltform&gt<br>
-							&nbsp&nbspEnter a number (between 1 and 5):<br>
-							&nbsp&nbsp&ltinput type="number" name="number" min="1" 
-							max="5"&gt<br>
-							&lt/form&gt<br>
+							&lt;form&gt;<br>
+							&nbsp;&nbsp;Enter a number (between 1 and 5):<br>
+							&nbsp;&nbsp;&lt;input type="number" name="number" min="1" 
+							max="5"&gt;<br>
+							&lt;/form&gt;<br>
 						</p>
 					</div>
 					<h5>Result</h5>
@@ -230,7 +230,7 @@
 					<h3>Range</h3>
 					<h4>Description</h4>
 					<p>
-						&ltinput type="range"&gt defines an imprecise control for setting the 
+						&lt;input type="range"&gt; defines an imprecise control for setting the 
 						element's value to a string representing a number. In the browser we 
 						get a control that allows us to drag a slider to change the number 
 						value.
@@ -239,11 +239,11 @@
 					<h5>HTML5</h5>
 					<div class="code-wrapper">
 						<p>
-							&ltform&gt<br>
-							&nbsp&nbsp&ltp&gtRange (0-50):&lt/p&gt<br>
-							&nbsp&nbsp&ltinput type="range" name="points" min="0" 
-							max="50"&gt<br>
-							&lt/form&gt<br>
+							&lt;form&gt;<br>
+							&nbsp;&nbsp;&lt;p&gt;Range (0-50):&lt;/p&gt;<br>
+							&nbsp;&nbsp;&lt;input type="range" name="points" min="0" 
+							max="50"&gt;<br>
+							&lt;/form&gt;<br>
 						</p>
 					</div>
 					<h5>Result</h5>
@@ -258,17 +258,17 @@
 					<h3>Month</h3>
 					<h4>Description</h4>
 					<p>
-						&ltinput type="month"&gt allows the user to select a month and year. A 
+						&lt;input type="month"&gt; allows the user to select a month and year. A 
 						date picker can show up in the input field.
 					</p> 
 					<h4>Example</h4>
 					<h5>HTML5</h5>
 					<div class="code-wrapper">
 						<p>
-							&ltform&gt<br>
-							&nbsp&nbspSelect a month:<br>
-							&nbsp&nbsp&ltinput type="month" name="month-year"&gt<br>
-							&lt/form&gt<br>
+							&lt;form&gt;<br>
+							&nbsp;&nbsp;Select a month:<br>
+							&nbsp;&nbsp;&lt;input type="month" name="month-year"&gt;<br>
+							&lt;/form&gt;<br>
 						</p>
 					</div>
 					<h5>Result</h5>
@@ -283,17 +283,17 @@
 					<h3>Week</h3>
 					<h4>Description</h4>
 					<p>
-						&ltinput type="week"&gt allows the user to select a week and year. A 
+						&lt;input type="week"&gt; allows the user to select a week and year. A 
 						date picker can show up in the input field.
 					</p> 
 					<h4>Example</h4>
 					<h5>HTML5</h5>
 					<div class="code-wrapper">
 						<p>
-							&ltform&gt<br>
-							&nbsp&nbspSelect a week:<br>
-							&nbsp&nbsp&ltinput type="week" name="week-year"&gt<br>
-							&lt/form&gt<br>
+							&lt;form&gt;<br>
+							&nbsp;&nbsp;Select a week:<br>
+							&nbsp;&nbsp;&lt;input type="week" name="week-year"&gt;<br>
+							&lt;/form&gt;<br>
 						</p>
 					</div>
 					<h5>Result</h5>
@@ -308,17 +308,17 @@
 					<h3>Date</h3>
 					<h4>Description</h4>
 					<p>
-						&ltinput type="date"&gt is used for input fields that should contain a 
+						&lt;input type="date"&gt; is used for input fields that should contain a 
 						date. A date picker can show up in the input field.
 					</p> 
 					<h4>Example</h4>
 					<h5>HTML5</h5>
 					<div class="code-wrapper">
 						<p>
-							&ltform&gt<br>
-							&nbsp&nbspBirthday:<br>
-							&nbsp&nbsp&ltinput type="date" name="birthday"&gt<br>
-							&lt/form&gt<br>
+							&lt;form&gt;<br>
+							&nbsp;&nbsp;Birthday:<br>
+							&nbsp;&nbsp;&lt;input type="date" name="birthday"&gt;<br>
+							&lt;/form&gt;<br>
 						</p>
 					</div>
 					<h5>Result</h5>
@@ -333,7 +333,7 @@
 					<h3>Datetime-local</h3>
 					<h4>Description</h4>
 					<p>
-						The &ltinput type="datetime-local"&gt specifies a date and time input 
+						The &lt;input type="datetime-local"&gt; specifies a date and time input 
 						field, with no time zone. A date picker can show up in the input 
 						field.
 					</p> 
@@ -341,10 +341,10 @@
 					<h5>HTML5</h5>
 					<div class="code-wrapper">
 						<p>
-							&ltform&gt<br>
-							&nbsp&nbspExam (date and time):<br>
-							&nbsp&nbsp&ltinput type="datetime-local" name="exam-time"&gt<br>
-							&lt/form&gt<br>
+							&lt;form&gt;<br>
+							&nbsp;&nbsp;Exam (date and time):<br>
+							&nbsp;&nbsp;&lt;input type="datetime-local" name="exam-time"&gt;<br>
+							&lt;/form&gt;<br>
 						</p>
 					</div>
 					<h5>Result</h5>
@@ -359,17 +359,17 @@
 					<h3>Datetime</h3>
 					<h4>Description</h4>
 					<p>
-						The &ltinput type="datetime"&gt specifies a date and time input field, 
+						The &lt;input type="datetime"&gt; specifies a date and time input field, 
 						with time zone. A date picker can show up in the input field.
 					</p> 
 					<h4>Example</h4>
 					<h5>HTML5</h5>
 					<div class="code-wrapper">
 						<p>
-							&ltform&gt<br>
-							&nbsp&nbspExam (date and time):<br>
-							&nbsp&nbsp&ltinput type="datetime" name="exam-time"&gt<br>
-							&lt/form&gt<br>
+							&lt;form&gt;<br>
+							&nbsp;&nbsp;Exam (date and time):<br>
+							&nbsp;&nbsp;&lt;input type="datetime" name="exam-time"&gt;<br>
+							&lt;/form&gt;<br>
 						</p>
 					</div>
 					<h5>Result</h5>
@@ -388,17 +388,17 @@
 					<h3>Time</h3>
 					<h4>Description</h4>
 					<p>
-						The &ltinput type="time"&gt allows the user to select a 
+						The &lt;input type="time"&gt; allows the user to select a 
 						time(no timezone). A time picker can show up in the input field.
 					</p> 
 					<h4>Example</h4>
 					<h5>HTML5</h5>
 					<div class="code-wrapper">
 						<p>
-							&ltform&gt<br>
-							&nbsp&nbspSelect a time:<br>
-							&nbsp&nbsp&ltinput type="time" name="usrtime"&gt<br>
-							&lt/form&gt<br>
+							&lt;form&gt;<br>
+							&nbsp;&nbsp;Select a time:<br>
+							&nbsp;&nbsp;&lt;input type="time" name="usrtime"&gt;<br>
+							&lt;/form&gt;<br>
 						</p>
 					</div>
 					<h5>Result</h5>
@@ -413,17 +413,17 @@
 					<h3>Color</h3>
 					<h4>Description</h4>
 					<p>
-						The &ltinput type="color"&gt is used for input fields that should 
+						The &lt;input type="color"&gt; is used for input fields that should 
 						contain a color. A color picker can show up in the input field.
 					</p> 
 					<h4>Example</h4>
 					<h5>HTML5</h5>
 					<div class="code-wrapper">
 						<p>
-							&ltform&gt<br>
-							&nbsp&nbspPick a color:<br>
-							&nbsp&nbsp&ltinput type="color" name="usrcolor"&gt<br>
-							&lt/form&gt<br>
+							&lt;form&gt;<br>
+							&nbsp;&nbsp;Pick a color:<br>
+							&nbsp;&nbsp;&lt;input type="color" name="usrcolor"&gt;<br>
+							&lt;/form&gt;<br>
 						</p>
 					</div>
 					<h5>Result</h5>
