Add box-model.html, change <title> for every page

--- a/home.html
+++ b/home.html
@@ -44,7 +44,7 @@
       		<div class="dropdown-content">
       			<a href="selectors.html">Selectors</a>
       			<a href="color.html">Color</a>
-      			<a href="">3</a>
+      			<a href="box-model.html">Box Model</a>
       			<a href="">4</a>
       			<a href="">5</a>
       			<a href="">6</a>
