--- a/new-input-types.html
+++ b/new-input-types.html
@@ -10,7 +10,7 @@
 		<meta charset="UTF-8">
   	<meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0;">
   	<link rel="stylesheet" href="main.css">
-		<title>New Input Types</title>
+		<title>HTML5/New Input Types</title>
 	</head>
 	<body>
 		<header>
@@ -44,7 +44,7 @@
       		<div class="dropdown-content">
       			<a href="selectors.html">Selectors</a>
       			<a href="color.html">Color</a>
-      			<a href="">3</a>
+      			<a href="box-model.html">Box Model</a>
       			<a href="">4</a>
       			<a href="">5</a>
       			<a href="">6</a>
