--- a/updated-tags.html
+++ b/updated-tags.html
@@ -88,7 +88,7 @@
 					</div>
 				</header>
 				<section>
-					<h3>&lt;i&gt; tag</h3>
+					<h3>&lt;i&gt;</h3>
 					<h4>Description</h4>
 					<p>
 						Represents text in an "alternate voice", mood, foreign words, 
@@ -115,7 +115,7 @@
 					</div>
 				</section>
 				<section>
-					<h3>&lt;b&gt; tag</h3>
+					<h3>&lt;b&gt;</h3>
 					<h4>Description</h4>
 					<p>
 						Represents "stylistically offset" text such as keywords and text that 
@@ -139,7 +139,7 @@
 					</div>
 				</section>
 				<section>
-					<h3>&lt;em&gt; tag</h3>
+					<h3>&lt;em&gt;</h3>
 					<h4>Description</h4>
 					<p>
 						Stress emphasis. If spoken, this stress would be emphasised 
@@ -154,7 +154,7 @@
 					</div>
 				</section>
 				<section>
-					<h3>&lt;strong&gt; tag</h3>
+					<h3>&lt;strong&gt;</h3>
 					<h4>Description</h4> 
 					<p>Strong importance.</p>
 					<h4>Examples</h4>
